test/corpus/keyword_identifiers
========================================================================
Test a field name that matches a modifier keyword
========================================================================

.class public LA/BC;
.super Ljava/lang/Object;
.source ""

.field private final bridge:Ljava/lang/Object;

---

(source_file
  (class_definition
    (class_directive
      (access_modifiers
        (access_modifier))
      (class_identifier
        (identifier)
        (identifier)))
    (super_directive
      (class_identifier
        (identifier)
        (identifier)
        (identifier)))
    (source_directive
      (string))
    (field_definition
      (access_modifier)
      (access_modifier)
      (field_identifier)
      (field_type
        (class_identifier
          (identifier)
          (identifier)
          (identifier))))))


========================================================================
Test a method name that matches a modifier keyword
========================================================================

.class public LA/BC;
.super Ljava/lang/Object;
.source ""

.method private static final synchronized()V
    return-void
.end method

---

(source_file
  (class_definition
    (class_directive
      (access_modifiers
        (access_modifier))
      (class_identifier
        (identifier)
        (identifier)))
    (super_directive
      (class_identifier
        (identifier)
        (identifier)
        (identifier)))
    (source_directive
      (string))
    (method_definition
      (access_modifier)
      (access_modifier)
      (access_modifier)
      (method_signature
        (method_identifier)
        (primitive_type))
      (expression
        (opcode)))))


========================================================================
Test a real synchronized modifier still parses as a modifier
========================================================================

.class public LA/BC;
.super Ljava/lang/Object;
.source ""

.method public synchronized foo()V
    return-void
.end method

---

(source_file
  (class_definition
    (class_directive
      (access_modifiers
        (access_modifier))
      (class_identifier
        (identifier)
        (identifier)))
    (super_directive
      (class_identifier
        (identifier)
        (identifier)
        (identifier)))
    (source_directive
      (string))
    (method_definition
      (access_modifier)
      (access_modifier)
      (method_signature
        (method_identifier)
        (primitive_type))
      (expression
        (opcode)))))
